<!--
  ~ Copyright (C) 2011-2023 lishid. All rights reserved.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, version 3.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.lishid</groupId>
  <artifactId>openinvparent</artifactId>
  <name>OpenInv</name>
  <url>http://dev.bukkit.org/bukkit-plugins/openinv/</url>
  <modules>
    <module>common</module>
  </modules>
  <version>5.1.6-SNAPSHOT</version>

  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.system>17</maven.compiler.system>
    <maven.compiler.release>17</maven.compiler.release>
    <!-- Silence IDE warning - property is declared in individual internal modules. -->
    <spigot.version>unknown</spigot.version>
  </properties>

  <profiles>
    <profile>
      <id>all</id>
      <modules>
        <module>api</module>
        <module>addon/togglepersist</module>
        <module>common</module>
        <module>internal/v1_21_R3</module>
        <module>internal/v1_21_R2</module>
        <module>plugin</module>
      </modules>
    </profile>

    <profile>
      <id>api-only</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <modules>
        <module>api</module>
      </modules>
    </profile>
  </profiles>

  <repositories>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <artifactId>annotations</artifactId>
        <groupId>org.jetbrains</groupId>
        <scope>provided</scope>
        <version>26.0.1</version>
      </dependency>
      <dependency>
        <artifactId>spigot-api</artifactId>
        <groupId>org.spigotmc</groupId>
        <scope>provided</scope>
        <version>1.21.1-R0.1-SNAPSHOT</version>
      </dependency>
      <dependency>
        <artifactId>openinvapi</artifactId>
        <groupId>com.lishid</groupId>
        <scope>compile</scope>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <artifactId>openinvcommon</artifactId>
        <groupId>com.lishid</groupId>
        <scope>compile</scope>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <artifactId>planarwrappers</artifactId>
        <groupId>com.github.jikoo</groupId>
        <scope>compile</scope>
        <version>3.3.0</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <!--
            ~ This plugin is used in scripts to determine if NMS dependencies need to be installed. This must be
            ~ declared so that we don't run into MDEP-204; the default SuperPOM declares version 2.8.0.
            -->
          <artifactId>maven-dependency-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.8.1</version>
        </plugin>

        <plugin>
          <artifactId>maven-shade-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.6.0</version>
        </plugin>

        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.3.1</version>
        </plugin>

        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.4.2</version>
          <configuration>
            <archive>
              <manifestEntries>
                <paperweight-mappings-namespace>spigot</paperweight-mappings-namespace>
              </manifestEntries>
            </archive>
          </configuration>
        </plugin>

        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <configuration>
            <annotationProcessorPaths>
              <path>
                <groupId>com.google.errorprone</groupId>
                <artifactId>error_prone_core</artifactId>
                <version>2.36.0</version>
              </path>
            </annotationProcessorPaths>
            <compilerArgs>
              <arg>-XDcompilePolicy=simple</arg>
              <arg>--should-stop=ifError=FLOW</arg>
              <arg>-Xplugin:ErrorProne</arg>
              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
            </compilerArgs>
            <fork>true</fork>
          </configuration>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.13.0</version>
        </plugin>

        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <groupId>org.apache.maven.plugins</groupId>
          <version>3.7.1</version>
        </plugin>

        <plugin>
          <artifactId>specialsource-maven-plugin</artifactId>
          <executions>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>remap</goal>
              </goals>
              <id>remap-obf</id>
              <configuration>
                <srgIn>org.spigotmc:minecraft-server:${spigot.version}:txt:maps-mojang</srgIn>
                <reverse>true</reverse>
                <remappedDependencies>org.spigotmc:spigot:${spigot.version}:jar:remapped-mojang</remappedDependencies>
                <remappedArtifactAttached>true</remappedArtifactAttached>
                <remappedClassifierName>remapped-obf</remappedClassifierName>
              </configuration>
            </execution>
            <execution>
              <phase>package</phase>
              <goals>
                <goal>remap</goal>
              </goals>
              <id>remap-spigot</id>
              <configuration>
                <inputFile>${project.build.directory}/${project.artifactId}-${project.version}-remapped-obf.jar</inputFile>
                <srgIn>org.spigotmc:minecraft-server:${spigot.version}:csrg:maps-spigot</srgIn>
                <remappedDependencies>org.spigotmc:spigot:${spigot.version}:jar:remapped-obf</remappedDependencies>
              </configuration>
            </execution>
          </executions>
          <groupId>net.md-5</groupId>
          <version>2.0.3</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

</project>
